--- a/config/carryon.cfg
+++ b/config/carryon.cfg
@@ -13,7 +13,7 @@ general {
         B:allowBabies=true
 
         # Slowness multiplier for blocks
-        D:blockSlownessMultiplier=1.0
+        D:blockSlownessMultiplier=1.3
 
         # Whether the player drops the carried object when hit or not
         B:dropCarriedWhenHit=false
@@ -39,7 +39,7 @@ general {
         # Maximum distance from where Blocks and Entities can be picked up
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:maxDistance=3.0
+        D:maxDistance=1
 
         # Max height of entities that can be picked up in survival mode
         # Min: 0.0
@@ -54,7 +54,7 @@ general {
         # Max width of entities that can be picked up in survival mode
         # Min: 0.0
         # Max: 10.0
-        D:maxEntityWidth=2.0
+        D:maxEntityWidth=1.4
 
         # Allow all blocks to be picked up, not just Tile Entites
         B:pickupAllBlocks=false
@@ -69,7 +69,7 @@ general {
         B:slownessInCreative=false
 
         # Allows entities to be stacked using Carry On
-        B:stackableEntities=true
+        B:stackableEntities=false
 
         # Use custom Pickup Scripts. Having this set to false, will not allow you to run scripts, but will increase your performance
         B:useScripts=false
@@ -232,7 +232,6 @@ general {
 
         # Entities that CAN be picked up
         S:allowedEntities <
-            minecraft:villager
          >
 
         # Entities that CAN have other entities stacked on top of them
