--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -88,7 +88,7 @@ general {
         minecraft:brewing_stand:*=reskillable:building|8
         rustic:condenser:*=reskillable:gathering|4
         rustic:condenser_advanced:*=reskillable:gathering|8
-        minecraft:enchanting_table:*=reskillable:building|8,reskillable:magic|20
+        minecraft:enchanting_table:*=reskillable:building|8,reskillable:magic|22
         rustic:chili_pepper_seeds:*=reskillable:farming|4
         rustic:tomato_seeds:*=reskillable:farming|4
         rustic:grape_stem:*=reskillable:farming|4
@@ -1106,31 +1106,31 @@ general {
         roots:iron_knife:*=reskillable:attack|4,reskillable:gathering|4
         roots:diamond_knife:*=reskillable:attack|8,reskillable:gathering|8
         roots:amethyst_knife:*=reskillable:attack|6,reskillable:gathering|6
-        roots:staff:*=reskillable:gathering|4,reskillable:magic|4
+        roots:staff:*=reskillable:gathering|2,reskillable:magic|2
         roots:living_pickaxe:*=reskillable:mining|4,reskillable:magic|6
         roots:living_shovel:*=reskillable:gathering|4,reskillable:magic|6
         roots:living_hoe:*=reskillable:farming|4,reskillable:magic|6
         roots:living_axe:*=reskillable:gathering|4,reskillable:magic|6
         roots:living_sword:*=reskillable:attack|4,reskillable:magic|6
         roots:wildwood_bow:*=reskillable:agility|4,reskillable:magic|6
-        roots:sylvan_helmet:*=reskillable:gathering|10,reskillable:magic|10
-        roots:sylvan_chestplate:*=reskillable:gathering|10,reskillable:magic|10
-        roots:sylvan_leggings:*=reskillable:gathering|10,reskillable:magic|10
-        roots:sylvan_boots:*=reskillable:gathering|10,reskillable:magic|10
-        roots:wildwood_helmet:*=reskillable:defense|10,reskillable:magic|10
-        roots:wildwood_chestplate:*=reskillable:defense|10,reskillable:magic|10
-        roots:wildwood_leggings:*=reskillable:defense|10,reskillable:magic|10
-        roots:wildwood_boots:*=reskillable:defense|10,reskillable:magic|10
+        roots:sylvan_helmet:*=reskillable:gathering|6,reskillable:magic|6
+        roots:sylvan_chestplate:*=reskillable:gathering|6,reskillable:magic|6
+        roots:sylvan_leggings:*=reskillable:gathering|6,reskillable:magic|6
+        roots:sylvan_boots:*=reskillable:gathering|6,reskillable:magic|6
+        roots:wildwood_helmet:*=reskillable:defense|6,reskillable:magic|6
+        roots:wildwood_chestplate:*=reskillable:defense|6,reskillable:magic|6
+        roots:wildwood_leggings:*=reskillable:defense|6,reskillable:magic|6
+        roots:wildwood_boots:*=reskillable:defense|6,reskillable:magic|6
         roots:runic_shears:*=reskillable:gathering|4,reskillable:magic|6
         roots:elemental_soil_terran:*=reskillable:gathering|10,reskillable:farming|10,reskillable:magic|8
         roots:elemental_soil_water:*=reskillable:|gathering|10,reskillable:farming|10,reskillable:magic|8
         roots:elemental_soil_fire:*=reskillable:|gathering|10,reskillable:farming|10,reskillable:magic|8
         roots:elemental_soil_air:*=reskillable:|gathering|10,reskillable:farming|10,reskillable:magic|8
-        roots:imbuer:*=reskillable:gathering|10,reskillable:magic|10
+        roots:imbuer:*=reskillable:gathering|5,reskillable:magic|5
         roots:fey_crafter:*=reskillable:gathering|5,reskillable:magic|5
         roots:incense_burner:*=reskillable:gathering|5,reskillable:magic|5
         roots:offertory_plate:*=reskillable:gathering|5,reskillable:magic|5
-        roots:wildwood_sapling:*=reskillable:farming|4,reskillable:magic|6
+        roots:wildwood_sapling:*=reskillable:farming|4,reskillable:magic|4
         naturesaura:ancient_sapling:*=reskillable:farming|4,reskillable:magic|6
         naturesaura:furnace_heater:*=reskillable:gathering|16,reskillable:building|12
         naturesaura:potion_generator:*=reskillable:gathering|12,reskillable:building|8
@@ -1272,28 +1272,28 @@ general {
         industrialforegoing:ore_sieve:*=reskillable:mining|32,reskillable:farming|32,reskillable:gathering|32,reskillable:building|32
         industrialforegoing:pitiful_fuel_generator:*=reskillable:building|32
         industrialforegoing:mob_imprisonment_tool:*=reskillable:farming|32,reskillable:gathering|32,reskillable:magic|32
-        twilightforest:naga_leggings:*=reskillable:defense|30,reskillable:agility|30
-        twilightforest:naga_chestplate:*=reskillable:defense|30,reskillable:agility|30
-        twilightforest:ironwood_helmet:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:ironwood_chestplate:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:ironwood_leggings:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:ironwood_boots:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:ironwood_sword:*=reskillable:attack|32,reskillable:agility|32
+        twilightforest:naga_leggings:*=reskillable:defense|26,reskillable:agility|24
+        twilightforest:naga_chestplate:*=reskillable:defense|26,reskillable:agility|24
+        twilightforest:ironwood_helmet:*=reskillable:defense|24,reskillable:agility|28
+        twilightforest:ironwood_chestplate:*=reskillable:defense|24,reskillable:agility|28
+        twilightforest:ironwood_leggings:*=reskillable:defense|24,reskillable:agility|28
+        twilightforest:ironwood_boots:*=reskillable:defense|24,reskillable:agility|28
+        twilightforest:ironwood_sword:*=reskillable:attack|28,reskillable:agility|28
         twilightforest:fiery_helmet:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:fiery_chestplate:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:fiery_leggings:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:fiery_boots:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:fiery_sword:*=reskillable:attack|32,reskillable:agility|32
-        twilightforest:steeleaf_helmet:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:steeleaf_chestplate:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:steeleaf_leggings:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:steeleaf_boots:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:steeleaf_sword:*=reskillable:attack|32,reskillable:agility|32
-        twilightforest:knightmetal_helmet:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:knightmetal_chestplate:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:knightmetal_leggings:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:knightmetal_boots:*=reskillable:defense|32,reskillable:agility|32
-        twilightforest:knightmetal_sword:*=reskillable:attack|32,reskillable:agility|32
+        twilightforest:steeleaf_helmet:*=reskillable:defense|30,reskillable:agility|28
+        twilightforest:steeleaf_chestplate:*=reskillable:defense|30,reskillable:agility|28
+        twilightforest:steeleaf_leggings:*=reskillable:defense|30,reskillable:agility|28
+        twilightforest:steeleaf_boots:*=reskillable:defense|30,reskillable:agility|28
+        twilightforest:steeleaf_sword:*=reskillable:attack|30,reskillable:agility|28
+        twilightforest:knightmetal_helmet:*=reskillable:defense|32,reskillable:agility|28
+        twilightforest:knightmetal_chestplate:*=reskillable:defense|32,reskillable:agility|28
+        twilightforest:knightmetal_leggings:*=reskillable:defense|32,reskillable:agility|28
+        twilightforest:knightmetal_boots:*=reskillable:defense|32,reskillable:agility|28
+        twilightforest:knightmetal_sword:*=reskillable:attack|32,reskillable:agility|28
         twilightforest:giant_sword:*=reskillable:attack|32,reskillable:agility|32
         twilightforest:phantom_helmet:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:phantom_chestplate:*=reskillable:defense|32,reskillable:agility|32
@@ -1307,7 +1307,8 @@ general {
         twilightforest:arctic_boots:*=reskillable:defense|32,reskillable:agility|32
         twilightforest:ice_sword:*=reskillable:attack|32,reskillable:agility|32,reskillable:magic|32
         twilightforest:glass_sword:*=reskillable:attack|32,reskillable:agility|32,reskillable:magic|32
-        apotheosis:hellshelf:*=reskillable:magic|32
+        apotheosis:hellshelf:*=reskillable:magic|32,reskillable:building|24
+        treasure2:skull_sword:*=reskillable:attack|8,reskillable:agility|8
      >
 }
 
@@ -1421,7 +1422,7 @@ trait {
         B:Enabled=true
         S:Requirements <
             reskillable:agility|12
-            reskillable:building|8
+            reskillable:building|4
          >
         I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=1
@@ -1478,7 +1479,6 @@ trait {
         S:Requirements <
             reskillable:building|8
             reskillable:gathering|4
-            reskillable:mining|6
          >
         I:"Skill Point Cost"=4
         I:"X-Pos [0-4]:"=1
@@ -1543,7 +1543,7 @@ trait {
     "reskillable:drop_guarantee" {
         B:Enabled=true
         S:Requirements <
-            reskillable:gathering|20
+            reskillable:gathering|14
             reskillable:attack|8
             reskillable:magic|4
          >
@@ -1572,9 +1572,9 @@ trait {
             
             reskillable:agility|16
             reskillable:defense|16
-            reskillable:magic|16
+            reskillable:magic|12
          >
-        I:"Skill Point Cost"=4
+        I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=1
     }
