--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -208,6 +208,7 @@ entitybasehealth {
     D:EntityLeonard=500.0
     D:EntityLobber=44.002742767333984
     D:EntityMagmaCube=4.0
+    D:EntityNaga=30.0
     D:EntityPech=30.0
     D:EntityPigZombie=20.0
     D:EntityPirate=20.0
