new names, better aquaculture

--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -485,6 +485,7 @@ entity {
         Bea
         Bella
         Becky
+        Bwipo
         Carlton
         Carl
         Calvin
@@ -553,7 +554,7 @@ entity {
         Geraldine
         Gabby
         Hendrix
-        Henry
+        Henry Hu
         Hobbes
         Herbert
         Heath
@@ -576,6 +577,7 @@ entity {
         Justin
         Jacob
         Jake
+        Joe
         Jon
         Johnson
         Johnny Tang
@@ -781,6 +783,9 @@ entity {
         Hermit
         The Honorable
         Disgraced
+        Robo
+        Mechanical
+        Wide
      >
 
     # A list of suffixes, which are used in the generation of boss names. A suffix is always preceeded by "The". May be empty. [default: [Mighty], [Supreme], [Superior], [Ultimate], [Lame], [Wimpy], [Curious], [Sneaky], [Pathetic], [Crying], [Eagle], [Errant], [Unholy], [Questionable], [Mean], [Hungry], [Thirsty], [Feeble], [Wise], [Sage], [Magical], [Mythical], [Legendary], [Not Very Nice], [Jerk], [Doctor], [Misunderstood], [Angry], [Knight], [Bishop], [Godly], [Special], [Toasty], [Shiny], [Shimmering], [Light], [Dark], [Odd-Smelling], [Funky], [Rock Smasher], [Son of Herobrine], [Cracked], [Sticky], [§kAlien§r], [Baby], [Manly], [Rough], [Scary], [Undoubtable], [Honest], [Non-Suspicious], [Boring], [Odd], [Lazy], [Super], [Nifty], [Ogre Slayer], [Pig Thief], [Dirt Digger], [Really Cool], [Doominator], [... Something]]
@@ -846,6 +851,18 @@ entity {
         Dirt Digger
         Really Cool
         Doominator
+        Mama
+        Wide
+        Hoe
+        Bitch
+        Nigerian
+        Indian
+        Chungus
+        Depressed
+        Chonk
+        Crackhead
+        Scammer
+        69th
         ... Something
      >
 }
@@ -862,6 +879,7 @@ items {
         Sallet
         Close Helm
         Barbute
+        Ushanka
      >
 
     # A list of root names for axes, used in the generation of item names. May not be empty. [default: [Axe], [Chopper], [Hatchet], [Tomahawk], [Cleaver], [Hacker], [Tree-Cutter], [Truncator]]
@@ -874,6 +892,7 @@ items {
         Hacker
         Tree-Cutter
         Truncator
+        Feller
      >
 
     # A list of root names for boots, used in the generation of item names. May not be empty. [default: [Boots], [Shoes], [Greaves], [Sabatons], [Sollerets]]
@@ -883,6 +902,7 @@ items {
         Greaves
         Sabatons
         Sollerets
+        Nikes
      >
 
     # A list of root names for bows, used in the generation of item names. May not be empty. [default: [Bow], [Shortbow], [Longbow], [Flatbow], [Recurve Bow], [Reflex Bow], [Self Bow], [Composite Bow], [Arrow-Flinger]]
@@ -896,6 +916,8 @@ items {
         Self Bow
         Composite Bow
         Arrow-Flinger
+        Compound Bow
+        MUDA MUDA
      >
 
     # A list of root names for chestplates, used in the generation of item names. May not be empty. [default: [Chestplate], [Tunic], [Brigandine], [Hauberk], [Cuirass]]
@@ -914,6 +936,7 @@ items {
         Tassets
         Cuisses
         Schynbalds
+        Adidas Track Suit
      >
 
     # A list of root names for pickaxes, used in the generation of item names. May not be empty. [default: [Pickaxe], [Pick], [Mattock], [Rock-Smasher], [Miner]]
