remove incontrol dread lich

--- a/config/battletowers.cfg
+++ b/config/battletowers.cfg
@@ -93,6 +93,7 @@ biomespawnallowed {
     B:cold_beach=true
     B:cold_desert=true
     B:coniferous_forest=true
+    B:coral_reef=true
     B:corrupted_sands=true
     B:crag_cliffs=true
     B:dark_forest=true
