--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -7,6 +7,7 @@ entitiesalwaysinfernal {
     B:BoundSoulEntity=false
     B:CaveSpider=false
     B:Creeper=false
+    B:ElderGuardian=false
     B:Enderman=false
     B:EntityAmalgalich=false
     B:EntityAshen=false
@@ -142,6 +143,7 @@ entitiesalwaysinfernal {
     B:EntityWroughtnaut=false
     B:EntityZombie=false
     B:EntityZombieVillager=false
+    B:Guardian=false
     B:Husk=false
     B:MoCEntityCaveOgre=false
     B:MoCEntityFireOgre=false
@@ -164,6 +166,7 @@ entitiesalwaysinfernal {
     B:Slime=false
     B:Spider=false
     B:Stray=false
+    B:Vex=false
     B:VindicationIllager=false
     B:Witch=false
     B:WitherSkeleton=false
@@ -181,8 +184,11 @@ entitiesalwaysinfernal {
     B:defiledlands.shambler=false
     B:defiledlands.shambler_twisted=false
     B:defiledlands.slime_defiled=false
+    B:dread_beast=false
+    B:dread_ghoul=false
     B:dread_lich=false
     B:dread_scuttler=false
+    B:dread_thrall=false
     B:"ebwizardry:evil_wizard"=false
     B:"ebwizardry:remnant"=false
     B:ettin=false
@@ -219,6 +225,7 @@ entitiesalwaysinfernal {
     B:siren=false
     B:stymphalianbird=false
     B:trumpetskeleton.TrumpetSkeleton=false
+    B:twilightforest.snow_queen=false
     B:wendigo=false
 }
 
@@ -328,6 +335,7 @@ entitybasehealth {
     D:EntityWroughtnaut=42.36789321899414
     D:EntityZombie=20.0
     D:EntityZombieVillager=20.0
+    D:Guardian=30.0
     D:MoCEntityCaveOgre=50.0
     D:MoCEntityFireOgre=35.0
     D:MoCEntityFlameWraith=15.0
@@ -354,8 +362,13 @@ entitybasehealth {
     D:defiledlands.host=37.345802307128906
     D:defiledlands.shambler=40.0
     D:defiledlands.slime_defiled=1.0
+    D:dread_beast=150.0
+    D:dread_lich=300.0
+    D:dread_scuttler=412.3945007324219
+    D:dread_thrall=178.08172607421875
     D:"ebwizardry:evil_wizard"=30.0
     D:ferrous_wroughtnaut=60.74569320678711
+    D:geist=16.5
     D:ghoul=12.0
     D:gorgon=111.16340637207031
     D:grottol=20.0
@@ -376,6 +389,7 @@ entitybasehealth {
     D:"quark:pirate"=20.0
     D:siren=50.0
     D:trumpetskeleton.TrumpetSkeleton=20.0
+    D:wendigo=44.0
 }
 
 
@@ -431,6 +445,7 @@ permittedentities {
     B:BoundSoulEntity=true
     B:CaveSpider=true
     B:Creeper=true
+    B:ElderGuardian=true
     B:Enderman=true
     B:EntityAmalgalich=false
     B:EntityAshen=true
@@ -566,6 +581,7 @@ permittedentities {
     B:EntityWroughtnaut=false
     B:EntityZombie=true
     B:EntityZombieVillager=true
+    B:Guardian=true
     B:Husk=true
     B:MoCEntityCaveOgre=true
     B:MoCEntityFireOgre=true
@@ -588,6 +604,7 @@ permittedentities {
     B:Slime=true
     B:Spider=true
     B:Stray=true
+    B:Vex=true
     B:VindicationIllager=true
     B:Witch=true
     B:WitherSkeleton=true
@@ -605,8 +622,11 @@ permittedentities {
     B:defiledlands.shambler=true
     B:defiledlands.shambler_twisted=true
     B:defiledlands.slime_defiled=true
+    B:dread_beast=true
+    B:dread_ghoul=true
     B:dread_lich=true
     B:dread_scuttler=true
+    B:dread_thrall=true
     B:"ebwizardry:evil_wizard"=true
     B:"ebwizardry:remnant"=true
     B:ettin=true
@@ -643,6 +663,7 @@ permittedentities {
     B:siren=true
     B:stymphalianbird=true
     B:trumpetskeleton.TrumpetSkeleton=true
+    B:twilightforest.snow_queen=true
     B:wendigo=true
 }
 
