qualitytools + dual wield
Signed-off-by: Stebmenow <johnnytislife@gmail.com>

--- a/config/mowziesmobs.cfg
+++ b/config/mowziesmobs.cfg
@@ -93,7 +93,7 @@ mobs {
             # Scale mob health by this value
             # Min: 0.0
             # Max: 100.0
-            D:health_multiplier=1.0
+            D:health_multiplier=3.0
         }
 
     }
@@ -262,7 +262,7 @@ mobs {
             # Scale mob health by this value
             # Min: 0.0
             # Max: 100.0
-            D:health_multiplier=1.0
+            D:health_multiplier=2.0
         }
 
     }
@@ -595,7 +595,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=6
+            I:spawn_rate=12
 
             ##########################################################################################################
             # biome_data
@@ -617,6 +617,7 @@ mobs {
                 S:biome_type <
                     BEACH,MOUNTAIN
                     BEACH,HILLS
+                    BEACH
                  >
 
                 # Allow spawns in these biomes regardless of the biome type settings
@@ -761,12 +762,12 @@ tools_and_abilities {
             # See official Minecraft Wiki for an explanation of how armor damage reduction works.
             # Min: 0
             # Max: 10000
-            I:damage_reduction=3
+            I:damage_reduction=3.25
 
             # See official Minecraft Wiki for an explanation of how armor toughness works.
             # Min: 0.0
             # Max: 10000.0
-            D:toughness=2.5
+            D:toughness=1.25
         }
 
     }
@@ -784,11 +785,11 @@ tools_and_abilities {
         tool_data {
             # Min: 0.0
             # Max: 100000.0
-            D:attack_damage=16.0
+            D:attack_damage=14.0
 
             # Min: 0.0
             # Max: 100000.0
-            D:attack_speed=0.6
+            D:attack_speed=0.5
         }
 
     }
@@ -807,7 +808,7 @@ tools_and_abilities {
             # See official Minecraft Wiki for an explanation of how armor damage reduction works.
             # Min: 0
             # Max: 10000
-            I:damage_reduction=4
+            I:damage_reduction=2.5
 
             # See official Minecraft Wiki for an explanation of how armor toughness works.
             # Min: 0.0
@@ -870,7 +871,7 @@ tools_and_abilities {
 
             # Min: 0.0
             # Max: 100000.0
-            D:attack_speed=1.2
+            D:attack_speed=1.5
         }
 
     }
