--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -626,7 +626,7 @@ decoration {
 
         # Set this to true to add a recipe to convert any Quark chest to a vanilla one.
         # Use this if some of your mods don't work with the ore dictionary key "chestWood".
-        B:"Enable Conversion to Vanilla Chests"=false
+        B:"Enable Conversion to Vanilla Chests"=true
         B:"Rename vanilla chests to Oak (Trapped) Chest"=true
     }
 
@@ -687,7 +687,7 @@ decoration {
 
 experimental {
     B:"Better nausea"=false
-    B:"Bigger caves"=false
+    B:"Bigger caves"=true
     B:"Collateral piston movement"=false
 
     # This feature is an incomplete test, and not fit for regular gameplay. Feel free to enable it to mess around but it may explode horribly. Don't report bugs with it.
@@ -698,7 +698,7 @@ experimental {
     B:"Custom splashes"=false
     B:"Dump texture atlases"=false
     B:"Framed blocks"=false
-    B:"Parrots say despacito"=false
+    B:"Parrots say despacito"=true
 
     # Suppresses all STDOUT (and STDERR, if enabled) messages so they don't show up in the console.
     # Use this if some mod left behind debug messages and you don't want to see them.
@@ -727,7 +727,7 @@ experimental {
         D:"Big Cave Size Variance"=8.0
 
         # Given the value of this config as X, in average, 1 in X caves will be a huge cave
-        I:"Huge Cave Chance"=100
+        I:"Huge Cave Chance"=60
         I:"Huge Cave Maximum Y Level"=52
         D:"Huge Cave Size Minimum"=14.0
         D:"Huge Cave Size Variance"=6.0
@@ -1259,7 +1259,7 @@ tweaks {
 
     "sheep have armor while wearing wool" {
         # The amount of armor points to give to a sheep when it is not sheared.
-        D:"Sheep Armor Amount"=1.0
+        D:"Sheep Armor Amount"=4.0
     }
 
     "hoes break a 5x5 of plants" {
@@ -1866,7 +1866,7 @@ world {
         # This can be higher than 100% if you want multiple per chunk, , 0 is 0%
         D:"Chance to Spawn"=0.06
         I:"Max Mob Count"=8
-        I:"Max Y Level"=20
+        I:"Max Y Level"=60
         I:"Min Mob Count"=5
         I:"Min Y Level"=3
 
@@ -1955,12 +1955,13 @@ world {
         B:"Only hat"=false
 
         # Given this value as X, 1 ship will spawn in X ocean biome chunks
-        I:"Pirate Ship Rarity"=2000
+        I:"Pirate Ship Rarity"=1000
 
         dimensions {
             #  [default: [0]]
             S:Dimensions <
                 0
+                7
              >
 
             #  [default: false]
@@ -2530,7 +2531,7 @@ world {
              >
 
             # The chance for a spider spawner to be a cave spider spawner instead
-            D:"Cave Spider Spawner Percentage Chance"=0.25
+            D:"Cave Spider Spawner Percentage Chance"=0.15
 
             # The chance ceiling cobwebs will spawn
             D:"Ceiling Cobweb Percentage Chance"=0.1
@@ -2927,10 +2928,10 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 14]
-            I:"Maximum Emerald Price"=14
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 8]
-            I:"Minimum Emerald Price"=8
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 2]
             I:"Required Villager Level"=2
@@ -2941,10 +2942,10 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 14]
-            I:"Maximum Emerald Price"=14
+            I:"Maximum Emerald Price"=3
 
             #  [range: 1 ~ 64, default: 8]
-            I:"Minimum Emerald Price"=8
+            I:"Minimum Emerald Price"=3
 
             #  [range: 0 ~ 10, default: 2]
             I:"Required Villager Level"=2
@@ -2955,10 +2956,10 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 14]
-            I:"Maximum Emerald Price"=14
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 8]
-            I:"Minimum Emerald Price"=8
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 2]
             I:"Required Villager Level"=2
@@ -2969,10 +2970,10 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 14]
-            I:"Maximum Emerald Price"=14
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 8]
-            I:"Minimum Emerald Price"=8
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 2]
             I:"Required Villager Level"=2
@@ -2983,10 +2984,10 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 14]
-            I:"Maximum Emerald Price"=14
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 8]
-            I:"Minimum Emerald Price"=8
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 2]
             I:"Required Villager Level"=2
@@ -2997,13 +2998,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 18]
-            I:"Maximum Emerald Price"=18
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 12]
-            I:"Minimum Emerald Price"=12
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 3]
-            I:"Required Villager Level"=3
+            I:"Required Villager Level"=2
         }
 
         redwood_taiga {
@@ -3011,13 +3012,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 18]
-            I:"Maximum Emerald Price"=18
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 12]
-            I:"Minimum Emerald Price"=12
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 3]
-            I:"Required Villager Level"=3
+            I:"Required Villager Level"=2
         }
 
         flower_forest {
@@ -3025,13 +3026,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 18]
-            I:"Maximum Emerald Price"=18
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 12]
-            I:"Minimum Emerald Price"=12
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 3]
-            I:"Required Villager Level"=3
+            I:"Required Villager Level"=2
         }
 
         jungle {
@@ -3039,13 +3040,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 22]
-            I:"Maximum Emerald Price"=22
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 16]
-            I:"Minimum Emerald Price"=16
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 4]
-            I:"Required Villager Level"=4
+            I:"Required Villager Level"=2
         }
 
         mesa {
@@ -3053,13 +3054,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 22]
-            I:"Maximum Emerald Price"=22
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 16]
-            I:"Minimum Emerald Price"=16
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 4]
-            I:"Required Villager Level"=4
+            I:"Required Villager Level"=2
         }
 
         mushroom_island {
@@ -3067,13 +3068,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 26]
-            I:"Maximum Emerald Price"=26
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 20]
-            I:"Minimum Emerald Price"=20
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 5]
-            I:"Required Villager Level"=5
+            I:"Required Villager Level"=2
         }
 
         ice_spikes {
@@ -3081,13 +3082,13 @@ world {
             B:Enabled=true
 
             #  [range: 1 ~ 64, default: 26]
-            I:"Maximum Emerald Price"=26
+            I:"Maximum Emerald Price"=1
 
             #  [range: 1 ~ 64, default: 20]
-            I:"Minimum Emerald Price"=20
+            I:"Minimum Emerald Price"=1
 
             #  [range: 0 ~ 10, default: 5]
-            I:"Required Villager Level"=5
+            I:"Required Villager Level"=2
         }
 
     }
