--- a/config/bettercombatmod.cfg
+++ b/config/bettercombatmod.cfg
@@ -10,7 +10,7 @@ general {
     B:"Additional hit sound"=true
 
     # Attacking an enemy while sprinting will no longer interrupt your sprint [default: true]
-    B:"Attack and Sprint"=false
+    B:"Attack and Sprint"=true
 
     # You may only attack if your energy is full [default: false]
     B:"Attacks require full energy"=false
@@ -44,16 +44,16 @@ general {
     B:"Longer Attack"=false
 
     # Every items can spawn the swipe animation [default: true]
-    B:"More swipe animation"=false
+    B:"More swipe animation"=true
 
     # The efficiency of an attack with offhanded weapon in percent (attack damage * efficiency) [range: 0.0 ~ 16384.0, default: 0.5]
-    S:"Offhand Efficiency"=0.8
+    S:"Offhand Efficiency"=1
 
     # How likely it is to land a critical hit in percent [range: 0.0 ~ 1.0, default: 0.3]
     S:"Random Crit Chance"=0.3
 
     # Melee attacks have now 30% chance to critically strike, critical strikes can no longer be forced by falling [default: true]
-    B:"Random Crits"=true
+    B:"Random Crits"=false
 
     # Melee attacks that don't hit the target won't cause cooldown [default: true]
     B:"Refound energy on miss"=false
@@ -62,7 +62,7 @@ general {
     B:"Weaker Left Arm"=false
 
     # Melee attacks hit in a wider area (easier to land hit) [default: true]
-    B:"Wider Attack"=false
+    B:"Wider Attack"=true
 
     # How much bigger the hitbox will be extended for wider attacks. Vanilla is 0.5 [range: 0.0 ~ 64.0, default: 1.5]
     S:"Wider Attack Width"=0.5
