new recipes for ebwizardry

--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -173,8 +173,10 @@ entitiesalwaysinfernal {
     B:WoodMimicEntity=false
     B:Zombie=false
     B:ZombieVillager=false
+    B:barako=false
     B:barakoan_barakoana=false
     B:barakoana=false
+    B:barakoaya=false
     B:bound_soul=false
     B:calpod=false
     B:cryptkeeper=false
@@ -224,7 +226,9 @@ entitiesalwaysinfernal {
     B:"quark:pirate"=false
     B:siren=false
     B:stymphalianbird=false
+    B:treant=false
     B:trumpetskeleton.TrumpetSkeleton=false
+    B:twilightforest.minoshroom=false
     B:twilightforest.snow_queen=false
     B:wendigo=false
 }
@@ -358,6 +362,7 @@ entitybasehealth {
     D:WitherSkeleton=46.166046142578125
     D:Zombie=98.81472778320312
     D:ZombieVillager=20.0
+    D:bound_soul=34.37588882446289
     D:cyclops=218.91790771484375
     D:defiledlands.host=37.345802307128906
     D:defiledlands.shambler=40.0
@@ -386,8 +391,10 @@ entitybasehealth {
     D:"mocreatures:werewolf"=40.0
     D:"mocreatures:wraith"=10.0
     D:"quark:ashen"=20.0
+    D:"quark:dweller"=20.0
     D:"quark:pirate"=20.0
     D:siren=50.0
+    D:stymphalianbird=24.0
     D:trumpetskeleton.TrumpetSkeleton=20.0
     D:wendigo=44.0
 }
@@ -611,8 +618,10 @@ permittedentities {
     B:WoodMimicEntity=true
     B:Zombie=true
     B:ZombieVillager=true
+    B:barako=true
     B:barakoan_barakoana=true
     B:barakoana=true
+    B:barakoaya=true
     B:bound_soul=true
     B:calpod=true
     B:cryptkeeper=true
@@ -662,7 +671,9 @@ permittedentities {
     B:"quark:pirate"=true
     B:siren=true
     B:stymphalianbird=true
+    B:treant=true
     B:trumpetskeleton.TrumpetSkeleton=true
+    B:twilightforest.minoshroom=true
     B:twilightforest.snow_queen=true
     B:wendigo=true
 }
