--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -135,7 +135,7 @@ main {
             S:"Health Lost on Death"=0.0
 
             # The maximum amount of health (in half hearts) a player can achieve with heart containers alone. Zero means unlimited. NOTE: Players must still obey Minecraft's max health cap. You can change that value with the "Max Health Cap" setting under the main category. [range: 0 ~ 2147483647, default: 0]
-            I:"Max Health"=40
+            I:"Max Health"=50
 
             # The minimum amount of health (in half hearts) a player can have. This is different from starting health. [range: 2 ~ 2147483647, default: 2]
             I:"Min Health"=2
@@ -260,13 +260,13 @@ main {
             B:"Allow Hostile Extra Health"=true
 
             # Allow peaceful/passive mobs (such as animals) to spawn with extra health based on difficulty.
-            B:"Allow Peaceful Extra Health"=true
+            B:"Allow Peaceful Extra Health"=false
 
             # The minimum extra health a hostile mob will have per point of difficulty, before the scaling mode is accounted for. [range: 0.0 ~ 3.4028234663852886E38, default: 0.5]
-            S:"Base Health Modifier"=0.15
+            S:"Base Health Modifier"=0
 
             # The minimum extra health a peaceful mob will have per point of difficulty, before the scaling mode is accounted for. Same as "Base Health Modifier", but for peaceful/passive mobs! [range: 0.0 ~ 3.4028234663852886E38, default: 0.25]
-            S:"Base Health Modifier Peaceful"=0.1
+            S:"Base Health Modifier Peaceful"=0.25
 
             # Mobs listed here will never receive extra health, and will not become blights. There is also a separate blacklist for blights, if you still want the mob in question to have extra health. [default: ]
             S:Blacklist <
@@ -306,6 +306,8 @@ main {
 
             # Mobs will not gain extra health or become blights in these dimensions. Integers only, any other entries will be silently ignored. [default: ]
             S:"Dimension Blacklist" <
+                7
+                111
              >
 
             # Describes how extra mob health is applied. This will not change the health of mobs that already exist!
@@ -313,8 +315,8 @@ main {
             #   MULTI - Multiplies the mob's health instead of adding a flat value. For example, endermen
             #     will always have around twice the health of zombies with this option.
             #   MULTI_HALF - Multiplies the mob's health, but the value is reduced for higher-health mobs.
-            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: ADD]
-            S:"Scaling Mode"=ADD
+            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: MULTI_HALF]
+            S:"Scaling Mode"=MULTI_HALF
         }
 
         blights {
@@ -347,7 +349,13 @@ main {
                 minecraft:wither
                 mocreatures:ghost
                 quark:foxhound
-                bewitchment:cambion
+                twilightforest:lich
+                twilightforest:naga
+                twilightforest:knight_phantom
+                twilightforest:ur_ghast
+                twilightforest:yeti_alpha
+                twilightforest:snow_queen
+                twilightforest:minoshroom
              >
 
             # If enabled, no bosses can become blights. If you need more control, use the Blacklist instead.
@@ -471,12 +479,12 @@ main {
 
         cursed_heart {
             # The amount of difficulty added/removed when using a cursed heart. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 10.0]
-            S:"Difficulty Change"=0
+            S:"Difficulty Change"=1
         }
 
         enchanted_heart {
             # The amount of difficulty added/removed when using an enchanted heart. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: -10.0]
-            S:"Difficulty Change"=0
+            S:"Difficulty Change"=-1
         }
 
     }
@@ -490,8 +498,8 @@ main {
         #   DISTANCE_FROM_SPAWN - Based on the mob's distance from spawn.
         #   DISTANCE_FROM_ORIGIN - Based on the mob's distance from the origin.
         #   DISTANCE_AND_TIME - Mix of DISTANCE_FROM_SPAWN and WEIGHTED_AVERAGE.
-        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: SERVER_WIDE]
-        S:"Area Mode"=DISTANCE_FROM_SPAWN
+        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: WEIGHTED_AVERAGE]
+        S:"Area Mode"=DISTANCE_AND_TIME
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Added When Sleeping"=0.0
@@ -506,20 +514,20 @@ main {
         S:"Difficulty Per Blight Kill"=0.0
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
-        S:"Difficulty Per Block"=0.001
+        S:"Difficulty Per Block"=0.0024999999441206455
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Boss Kill"=0.0
 
         # Difficulty change per hostile mob killed. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Kill"=0
+        S:"Difficulty Per Kill"=0.0
 
         # Lets you set difficulty changes for individual mobs. Each line has 3 values separated by spaces: entity ID, standard kill change, blight kill change. For example, entering "minecraft:zombie 0.1 -20" will cause zombie kills to add 0.1 difficulty, but killing a blight zombie will remove 20 difficulty instead. [default: ]
         S:"Difficulty Per Kill By Mob" <
          >
 
         # Difficulty change per passive mob kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Passive Kill"=0
+        S:"Difficulty Per Passive Kill"=0.0
 
         # Apply a simple change to the area difficulty in a given dimension. Use the dimension ID, then a space, then an operator (+-*/) followed by a number. For example, "-1 *2.0" would make difficulty 2x higher in the Nether. "1 +20" would increase difficulty by 20 in The End [default: ]
         S:"Dimension Value Factor" <
@@ -536,22 +544,22 @@ main {
          >
 
         # Adds extra difficulty per additional nearby player. So area difficulty will be multiplied by: 1 + group_bonus * (players_in_area - 1) [range: -10.0 ~ 10.0, default: 0.05000000074505806]
-        S:"Group Area Bonus"=0
+        S:"Group Area Bonus"=0.05000000074505806
 
         # Difficulty added per second is multiplied by this if the player is not moving. [range: -100.0 ~ 100.0, default: 0.699999988079071]
         S:"Idle Multiplier"=0
 
         # The amount difficulty changes each second. In Difficult Life, the option was named per tick, but was actually applied each second. Negative numbers will decrease difficulty over time. [range: -10000.0 ~ 10000.0, default: 0.0011573999654501677]
-        S:"Increase Per Second"=0
+        S:"Increase Per Second"=0.000625
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Lost On Death"=0.0
+        S:"Lost On Death"=1.0
 
         # The maximum difficulty level that can be reached. [range: 0.0 ~ 3.4028234663852886E38, default: 250.0]
-        S:"Max Value"=50
+        S:"Max Value"=250.0
 
         # The minimum difficulty value. This can be different from the starting value. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
-        S:"Min Value"=50
+        S:"Min Value"=0.0
 
         # Allows players' difficulty to be reset at certain frequencies.
         #   NONE - Do not do regular resets.  Weekdays (SUNDAY, MONDAY, etc.) - Reset on this day of the week. If the player does not play on this day, they will be reset the next time they log in.
@@ -559,10 +567,10 @@ main {
         S:"Reset Time"=NONE
 
         # The distance from a newly spawned mob to search for players to determine its difficulty level. Set to 0 for unlimited range. [range: 0 ~ 32767, default: 256]
-        I:"Search Radius"=0
+        I:"Search Radius"=256
 
         # The starting difficulty level for new worlds or players joining for the first time. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
-        S:"Starting Value"=50
+        S:"Starting Value"=0.0
 
         lunar_phases {
             # Difficulty multipliers for each lunar phase. There must be exactly 8 values. The first is full moon, the fifth is new moon. [default: [1.5], [1.3], [1.2], [1.0], [0.8], [1.0], [1.2], [1.3]]
