--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -16,6 +16,9 @@ gamerules {
     # Whether command blocks should notify admins when they perform commands
     S:commandBlockOutput=true
 
+    # GameRule added by another mod or from commands
+    S:dayNightCycle=false
+
     # Whether the server should skip checking player speed when the player is wearing elytra.
     S:disableElytraMovementCheck=false
 
