--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -221,6 +221,7 @@ entitiesalwaysinfernal {
     B:"mocreatures:werewolf"=false
     B:"mocreatures:wraith"=false
     B:"mocreatures:wwolf"=false
+    B:pirate_mimic=false
     B:"quark:ashen"=false
     B:"quark:dweller"=false
     B:"quark:pirate"=false
@@ -340,6 +341,7 @@ entitybasehealth {
     D:EntityZombie=20.0
     D:EntityZombieVillager=20.0
     D:Guardian=30.0
+    D:Husk=20.0
     D:MoCEntityCaveOgre=50.0
     D:MoCEntityFireOgre=35.0
     D:MoCEntityFlameWraith=15.0
@@ -396,6 +398,7 @@ entitybasehealth {
     D:siren=50.0
     D:stymphalianbird=24.0
     D:trumpetskeleton.TrumpetSkeleton=20.0
+    D:twilightforest.minoshroom=6000.0
     D:wendigo=44.0
 }
 
@@ -666,6 +669,7 @@ permittedentities {
     B:"mocreatures:werewolf"=true
     B:"mocreatures:wraith"=true
     B:"mocreatures:wwolf"=true
+    B:pirate_mimic=true
     B:"quark:ashen"=true
     B:"quark:dweller"=true
     B:"quark:pirate"=true
