--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -728,7 +728,7 @@ experimental {
 
         # Given the value of this config as X, in average, 1 in X caves will be a huge cave
         I:"Huge Cave Chance"=60
-        I:"Huge Cave Maximum Y Level"=52
+        I:"Huge Cave Maximum Y Level"=32
         D:"Huge Cave Size Minimum"=14.0
         D:"Huge Cave Size Variance"=6.0
         B:"Huge Caves Enabled"=true
@@ -737,7 +737,7 @@ experimental {
         D:"Overall Cave Size Minimum"=0.0
 
         # Vanilla value is 3
-        D:"Overall Cave Size Variance"=7.0
+        D:"Overall Cave Size Variance"=4.0
     }
 
     "reject mods" {
@@ -1513,6 +1513,11 @@ vanity {
             headbang
             weep
             facepalm
+            dab
+            dance
+            jet
+            t-pose
+            zombie
          >
     }
 
@@ -1668,7 +1673,7 @@ world {
         B:"Enable Hat"=true
 
         # Set to false to make the hat not increase ore yield
-        B:"Hat Increases Ore Yield"=false
+        B:"Hat Increases Ore Yield"=true
         I:"Max Y"=50
         I:"Min Y"=20
 
