--- a/config/treasure2/treasure2-c1.0.cfg
+++ b/config/treasure2/treasure2-c1.0.cfg
@@ -88,6 +88,61 @@ general {
         # Max: 100
         I:"01. Max. size of chest registry:"=25
 
+        # Note: Disabling one or more chests could remove all chests from a particular rarity group and lead to empty treasure sites.
+        # Enable/Disable whether a wood chest will spawn.
+        B:"02. Enable wood chest:"=true
+
+        # Enable/Disable whether a crate will spawn.
+        B:"03. Enable crate:"=true
+
+        # Enable/Disable whether a moldy crate will spawn.
+        B:"04. Enable moldy crate:"=true
+
+        # Enable/Disable whether an iron-bound chest will spawn.
+        B:"05. Enable iron-bound chest:"=true
+
+        # Enable/Disable whether a pirate chest will spawn.
+        B:"06. Enable pirate chest:"=true
+
+        # Enable/Disable whether an iron strongbox  will spawn.
+        B:"07. Enable iron strongbox:"=true
+
+        # Enable/Disable whether a gold strongbox will spawn.
+        B:"08. Enable gold strongbox:"=true
+
+        # Enable/Disable whether a safe will spawn.
+        B:"09. Enable safe:"=true
+
+        # Enable/Disable whether a dread pirate chest will spawn.
+        B:"10. Enable dread pirate chest:"=true
+
+        # Enable/Disable whether a compressor chest will spawn.
+        B:"11. Enable compressor chest:"=true
+
+        # Enable/Disable whether a spider chest will spawn.
+        B:"12. Enable spider chest:"=true
+
+        # Enable/Disable whether a skull chest will spawn.
+        B:"13. Enable skull chest:"=true
+
+        # Enable/Disable whether a gold skull chest will spawn.
+        B:"14. Enable gold skull chest:"=true
+
+        # Enable/Disable whether a crystal skull chest will spawn.
+        B:"15. Enable crystal skull chest:"=true
+
+        # Enable/Disable whether a viking chest will spawn.
+        B:"16. Enable viking chest:"=true
+
+        # Enable/Disable whether a cauldron chest will spawn.
+        B:"17. Enable cauldron chest:"=true
+
+        # Enable/Disable whether a cardboard box will spawn.
+        B:"18. Enable cardboard box:"=true
+
+        # Enable/Disable whether a milk crate will spawn.
+        B:"19. Enable milk crate:"=true
+
         ##########################################################################################################
         # 01 surface chests
         #--------------------------------------------------------------------------------------------------------#
@@ -808,6 +863,19 @@ general {
         # Max: 100.0
         D:"07. Probability of root item on harvest:"=50.0
 
+        # 
+        # Min: 10
+        # Max: 250
+        I:"08. Max. size of the wither tree registry:"=25
+
+        # The minimum distance, measured in blocks, that two wither trees can be in proximity.
+        # Note: Only wither trees in the registry are checked against this property.
+        # Used in conjunction with the chunks per wither tree and spawn probability.
+        # Ex. 
+        # Min: 0
+        # Max: 32000
+        I:"09. Min. distance per wither tree spawn:"=500
+
         ##########################################################################################################
         # biomes
         #--------------------------------------------------------------------------------------------------------#
@@ -1042,6 +1110,56 @@ general {
         # Min: 1
         # Max: 20
         I:"11. Sapphire ore veins per chunk."=1
+
+        # The probability that a amethyst ore will spawn.
+        # Min: 0.0
+        # Max: 100.0
+        D:"12. Probability of amethyst ore spawn."=75.0
+
+        # The max. y-value where a amethyst ore can spawn.
+        # Min: 1
+        # Max: 255
+        I:"13. Max. y-value for amethyst ore spawn location:"=24
+
+        # The min. y-value where a amethyst ore can spawn.
+        # Min: 1
+        # Max: 255
+        I:"14. Min. y-value for amethyst ore spawn location:"=8
+
+        # The number of amethyst ore blocks in a vein.
+        # Min: 1
+        # Max: 20
+        I:"15. Amethyst ore vein size:"=4
+
+        # The number of amethyst ore veins in a chunk.
+        # Min: 1
+        # Max: 20
+        I:"16. Amethyst ore veins per chunk."=1
+
+        # The probability that a onyx ore will spawn.
+        # Min: 0.0
+        # Max: 100.0
+        D:"17. Probability of onyx ore spawn."=75.0
+
+        # The max. y-value where a onyx ore can spawn.
+        # Min: 1
+        # Max: 255
+        I:"18. Max. y-value for onyx ore spawn location:"=24
+
+        # The min. y-value where a onyx ore can spawn.
+        # Min: 1
+        # Max: 255
+        I:"19. Min. y-value for onyx ore spawn location:"=8
+
+        # The number of onyx ore blocks in a vein.
+        # Min: 1
+        # Max: 20
+        I:"20. Onyx ore vein size:"=4
+
+        # The number of onyx ore veins in a chunk.
+        # Min: 1
+        # Max: 20
+        I:"21. Onyx ore veins per chunk."=1
     }
 
     ##########################################################################################################
